<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">オセロゲーム</string>
    <string name="action_settings">Settings</string>
    <string name="square1">a1</string>
    <string name="square2">b1</string>
    <string name="square3">c1</string>
    <string name="square4">d1</string>
    <string name="square5">e1</string>
    <string name="square6">f1</string>
    <string name="square7">g1</string>
    <string name="square8">h1</string>
    <string name="square9">a2</string>
    <string name="square10">b2</string>
    <string name="square11">c2</string>
    <string name="square12">d2</string>
    <string name="square13">e2</string>
    <string name="square14">f2</string>
    <string name="square15">g2</string>
    <string name="square16">h2</string>
    <string name="square17">a3</string>
    <string name="square18">b3</string>
    <string name="square19">c3</string>
    <string name="square20">d3</string>
    <string name="square21">e3</string>
    <string name="square22">f3</string>
    <string name="square23">g3</string>
    <string name="square24">h3</string>
    <string name="square25">a4</string>
    <string name="square26">b4</string>
    <string name="square27">c4</string>
    <string name="square28">d4</string>
    <string name="square29">e4</string>
    <string name="square30">f4</string>
    <string name="square31">g4</string>
    <string name="square32">h4</string>
    <string name="square33">a5</string>
    <string name="square34">b5</string>
    <string name="square35">c5</string>
    <string name="square36">d5</string>
    <string name="square37">e5</string>
    <string name="square38">f5</string>
    <string name="square39">g5</string>
    <string name="square40">h5</string>
    <string name="square41">a6</string>
    <string name="square42">b6</string>
    <string name="square43">c6</string>
    <string name="square44">d6</string>
    <string name="square45">e6</string>
    <string name="square46">f6</string>
    <string name="square47">g6</string>
    <string name="square48">h6</string>
    <string name="square49">a7</string>
    <string name="square50">b7</string>
    <string name="square51">c7</string>
    <string name="square52">d7</string>
    <string name="square53">e7</string>
    <string name="square54">f7</string>
    <string name="square55">g7</string>
    <string name="square56">h7</string>
    <string name="square57">a8</string>
    <string name="square58">b8</string>
    <string name="square59">c8</string>
    <string name="square60">d8</string>
    <string name="square61">e8</string>
    <string name="square62">f8</string>
    <string name="square63">g8</string>
    <string name="square64">h8</string>
    <string name="icon_name">オセロ</string>
    <string name="opening_title">タイトル</string>
    <string name="game_start">ゲーム開始</string>
    <string name="setting">設定</string>
    <string name="square_suggest_msg">置けるマスを表示する</string>
    <string name="square_suggest_summary">石を置けるマスを分かるように表示</string>
    <string name="undoButton">戻る</string>
    <string name="redoButton">進む</string>
</resources>
