<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <!-- 黒石の数 -->
	    <TextView
	          android:id="@+id/blackCount"
	          android:textAppearance="?android:attr/textAppearanceMedium"
	          android:layout_width="0dp"
	          android:layout_height="wrap_content"
	          android:layout_weight="0.12"
		/>

	    <!-- 白石の数 -->
	    <TextView
	          android:id="@+id/whiteCount"
	          android:textAppearance="?android:attr/textAppearanceMedium"
	          android:layout_width="0dp"
	          android:layout_height="wrap_content"
	          android:layout_weight="0.12"
		/>
	</LinearLayout>

	<TableLayout
	  android:id="@+id/container"
	  android:layout_width="match_parent"
	  android:layout_height="356dp"
	  tools:context="game.othello.GameScreen"
	  tools:ignore="MergeRootFrame" >

	    <!-- オセロ盤 -->
	   	<TableRow
	         android:id="@+id/tableRow1"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_weight="1">

			<ImageButton
		           android:id="@+id/square1"
		           style="@style/square"
		           android:contentDescription="@string/square1"
			/>
			<ImageButton
		           android:id="@+id/square2"
		           style="@style/square"
		           android:contentDescription="@string/square2"
			/>
			<ImageButton
		           android:id="@+id/square3"
		           style="@style/square"
		           android:contentDescription="@string/square3"
			/>
			<ImageButton
		           android:id="@+id/square4"
		           style="@style/square"
		           android:contentDescription="@string/square4"
			/>
			<ImageButton
		           android:id="@+id/square5"
		           style="@style/square"
		           android:contentDescription="@string/square5"
			/>
			<ImageButton
		           android:id="@+id/square6"
		           style="@style/square"
		           android:contentDescription="@string/square6"
			/>
			<ImageButton
		           android:id="@+id/square7"
		           style="@style/square"
		           android:contentDescription="@string/square7"
			/>
			<ImageButton
		           android:id="@+id/square8"
		           style="@style/square"
		           android:contentDescription="@string/square8"
			/>
		</TableRow>

	    <TableRow
	          android:id="@+id/tableRow2"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1">
			<ImageButton
		           android:id="@+id/square9"
		           style="@style/square"
		           android:contentDescription="@string/square9"
			/>
			<ImageButton
		           android:id="@+id/square10"
		           style="@style/square"
		           android:contentDescription="@string/square10"
			/>
			<ImageButton
		           android:id="@+id/square11"
		           style="@style/square"
		           android:contentDescription="@string/square11"
			/>
			<ImageButton
		           android:id="@+id/square12"
		           style="@style/square"
		           android:contentDescription="@string/square12"
			/>
			<ImageButton
		           android:id="@+id/square13"
		           style="@style/square"
		           android:contentDescription="@string/square13"
			/>
			<ImageButton
		           android:id="@+id/square14"
		           style="@style/square"
		           android:contentDescription="@string/square14"
			/>
			<ImageButton
		           android:id="@+id/square15"
		           style="@style/square"
		           android:contentDescription="@string/square15"
			/>
			<ImageButton
		           android:id="@+id/square16"
		           style="@style/square"
		           android:contentDescription="@string/square16"
			/>
	    </TableRow>

	    <TableRow
	          android:id="@+id/tableRow3"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1">
			<ImageButton
		           android:id="@+id/square17"
		           style="@style/square"
		           android:contentDescription="@string/square17"
			/>
			<ImageButton
		           android:id="@+id/square18"
		           style="@style/square"
		           android:contentDescription="@string/square18"
			/>
			<ImageButton
		           android:id="@+id/square19"
		           style="@style/square"
		           android:contentDescription="@string/square19"
			/>
			<ImageButton
		           android:id="@+id/square20"
		           style="@style/square"
		           android:contentDescription="@string/square20"
			/>
			<ImageButton
		           android:id="@+id/square21"
		           style="@style/square"
		           android:contentDescription="@string/square21"
			/>
			<ImageButton
		           android:id="@+id/square22"
		           style="@style/square"
		           android:contentDescription="@string/square22"
			/>
			<ImageButton
		           android:id="@+id/square23"
		           style="@style/square"
		           android:contentDescription="@string/square23"
			/>
			<ImageButton
		           android:id="@+id/square24"
		           style="@style/square"
		           android:contentDescription="@string/square24"
			/>
	    </TableRow>

	    <TableRow
	          android:id="@+id/tableRow4"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1">
			<ImageButton
		           android:id="@+id/square25"
		           style="@style/square"
		           android:contentDescription="@string/square25"
			/>
			<ImageButton
		           android:id="@+id/square26"
		           style="@style/square"
		           android:contentDescription="@string/square26"
			/>
			<ImageButton
		           android:id="@+id/square27"
		           style="@style/square"
		           android:contentDescription="@string/square27"
			/>
			<ImageButton
		           android:id="@+id/square28"
		           style="@style/square"
		           android:contentDescription="@string/square28"
			/>
			<ImageButton
		           android:id="@+id/square29"
		           style="@style/square"
		           android:contentDescription="@string/square29"
			/>
			<ImageButton
		           android:id="@+id/square30"
		           style="@style/square"
		           android:contentDescription="@string/square30"
			/>
			<ImageButton
		           android:id="@+id/square31"
		           style="@style/square"
		           android:contentDescription="@string/square31"
			/>
			<ImageButton
		           android:id="@+id/square32"
		           style="@style/square"
		           android:contentDescription="@string/square32"
			/>
	    </TableRow>

	    <TableRow
	          android:id="@+id/tableRow5"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1">
			<ImageButton
		           android:id="@+id/square33"
		           style="@style/square"
		           android:contentDescription="@string/square33"
			/>
			<ImageButton
		           android:id="@+id/square34"
		           style="@style/square"
		           android:contentDescription="@string/square34"
			/>
			<ImageButton
		           android:id="@+id/square35"
		           style="@style/square"
		           android:contentDescription="@string/square35"
			/>
			<ImageButton
		           android:id="@+id/square36"
		           style="@style/square"
		           android:contentDescription="@string/square36"
			/>
			<ImageButton
		           android:id="@+id/square37"
		           style="@style/square"
		           android:contentDescription="@string/square37"
			/>
			<ImageButton
		           android:id="@+id/square38"
		           style="@style/square"
		           android:contentDescription="@string/square38"
			/>
			<ImageButton
		           android:id="@+id/square39"
		           style="@style/square"
		           android:contentDescription="@string/square39"
			/>
			<ImageButton
		           android:id="@+id/square40"
		           style="@style/square"
		           android:contentDescription="@string/square40"
			/>
	    </TableRow>

	    <TableRow
	          android:id="@+id/tableRow6"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1">
			<ImageButton
		           android:id="@+id/square41"
		           style="@style/square"
		           android:contentDescription="@string/square41"
			/>
			<ImageButton
		           android:id="@+id/square42"
		           style="@style/square"
		           android:contentDescription="@string/square42"
			/>
			<ImageButton
		           android:id="@+id/square43"
		           style="@style/square"
		           android:contentDescription="@string/square43"
			/>
			<ImageButton
		           android:id="@+id/square44"
		           style="@style/square"
		           android:contentDescription="@string/square44"
			/>
			<ImageButton
		           android:id="@+id/square45"
		           style="@style/square"
		           android:contentDescription="@string/square45"
			/>
			<ImageButton
		           android:id="@+id/square46"
		           style="@style/square"
		           android:contentDescription="@string/square46"
			/>
			<ImageButton
		           android:id="@+id/square47"
		           style="@style/square"
		           android:contentDescription="@string/square47"
			/>
			<ImageButton
		           android:id="@+id/square48"
		           style="@style/square"
		           android:contentDescription="@string/square48"
			/>
	    </TableRow>

	    <TableRow
	          android:id="@+id/tableRow7"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1">
			<ImageButton
		           android:id="@+id/square49"
		           style="@style/square"
		           android:contentDescription="@string/square49"
			/>
			<ImageButton
		           android:id="@+id/square50"
		           style="@style/square"
		           android:contentDescription="@string/square50"
			/>
			<ImageButton
		           android:id="@+id/square51"
		           style="@style/square"
		           android:contentDescription="@string/square51"
			/>
			<ImageButton
		           android:id="@+id/square52"
		           style="@style/square"
		           android:contentDescription="@string/square52"
			/>
			<ImageButton
		           android:id="@+id/square53"
		           style="@style/square"
		           android:contentDescription="@string/square53"
			/>
			<ImageButton
		           android:id="@+id/square54"
		           style="@style/square"
		           android:contentDescription="@string/square54"
			/>
			<ImageButton
		           android:id="@+id/square55"
		           style="@style/square"
		           android:contentDescription="@string/square55"
			/>
			<ImageButton
		           android:id="@+id/square56"
		           style="@style/square"
		           android:contentDescription="@string/square56"
			/>
	    </TableRow>

	    <TableRow
	          android:id="@+id/tableRow8"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1">
			<ImageButton
		           android:id="@+id/square57"
		           style="@style/square"
		           android:contentDescription="@string/square57"
			/>
			<ImageButton
		           android:id="@+id/square58"
		           style="@style/square"
		           android:contentDescription="@string/square58"
			/>
			<ImageButton
		           android:id="@+id/square59"
		           style="@style/square"
		           android:contentDescription="@string/square59"
			/>
			<ImageButton
		           android:id="@+id/square60"
		           style="@style/square"
		           android:contentDescription="@string/square60"
			/>
			<ImageButton
		           android:id="@+id/square61"
		           style="@style/square"
		           android:contentDescription="@string/square61"
			/>
			<ImageButton
		           android:id="@+id/square62"
		           style="@style/square"
		           android:contentDescription="@string/square62"
			/>
			<ImageButton
		           android:id="@+id/square63"
		           style="@style/square"
		           android:contentDescription="@string/square63"
			/>
			<ImageButton
		           android:id="@+id/square64"
		           style="@style/square"
		           android:contentDescription="@string/square64"
			/>
	    </TableRow>

	</TableLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <!-- [戻る]ボタン -->
	    <Button
	          android:text="@string/undoButton"
	          android:id="@+id/undoBtn"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="0.12"
		/>

	    <!-- [進む]ボタン -->
	    <Button
	          android:text="@string/redoButton"
	          android:id="@+id/redoBtn"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="0.12"
		/>

	</LinearLayout>
</LinearLayout>