<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nakam.othello_android.game.othello.OpeningScreen"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical">

	<ImageView
		android:id="@+id/opening_title"
		android:layout_width="wrap_content"
		android:layout_height="377dp"
		android:contentDescription="@string/opening_title"
		android:src="@drawable/app_title" />

	<Button
	    android:text="@string/game_start"
	    android:id="@+id/StartBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" />

    <Button
	    android:text="@string/setting"
	    android:id="@+id/SettingBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" />

</LinearLayout>